# smashing-download

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yaml
smashing_download/: cli.py  errors.py  loader.py  logger.py  parser.py  scrape.py
smashing_download/script/: smashing_loader.py
tests/: conftest.py  test_loader.py  test_parser.py  test_scrape.py  test_smashing_download.py
tests/fixture/: uri.json
tests/fixture/site/: index.html
