[tool.poetry]
name = "smashing-download"
version = "0.1.0"
description = "CLI utility for downloading wallpaper from mashing site."
authors = ["Aleksey94Dan <danilchenko.aleksey94@gmail.com>"]

packages = [
    { include = "smashing_download" }
]


classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Topic :: Internet",
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.29.0"
wemake-python-styleguide = "^0.15.3"
flake8-aaa = "^0.12.0"
flake8-simplify = "^0.14.2"
isort = "^5.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/legacy/"


[tool.poetry.scripts]
smashing-loader = "smashing_download.script.smashing_loader:main"


[tool.pyright]
venvPath = "."
venv = ".venv"
