[tool.poetry]
name = "smashing-download"
version = "0.1.0"
description = "CLI utility for downloading wallpaper from mashing site."
authors = ["Aleksey94Dan <danilchenko.aleksey94@gmail.com>"]

packages = [
    { include = "smashing_download" }
]


classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Topic :: Internet",
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.0"

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"
wemake-python-styleguide = "^0.15.3"
flake8-aaa = "^0.12.0"
flake8-simplify = "^0.14.2"
isort = "^5.10.1"
mypy = "^0.910"
requests-mock = "^1.9.3"
types-requests = "^2.26.1"
coverage = "^6.2"
pytest-cov = "^3.0.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/legacy/"


[tool.poetry.scripts]
smashing-loader = "smashing_download.script.smashing_loader:main"


[tool.pyright]
venvPath = "."
venv = ".venv"
